# voxel-thing

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
src/: gif.hpp  main.cpp
